# Task-manager-app

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docs.txt  pyproject.toml  test.txt  text.txt
app/: __init__.py
app/adapters/: postgresql_repository.py
app/adapters/api/: auth_controller.py  error_handler.py  task_controller.py  user_controller.py
app/application/: auth_service.py  ports.py  service.py  task_service.py
app/domain/: entity.py  factory.py  observer.py
app/infrastructure/: config.py  database.py
taskmanager/: Dockerfile  package-lock.json  package.json
taskmanager/src/: App.vue  style.css
taskmanager/src/components/: Sidebar.vue  Toast.vue
taskmanager/src/router/: index.js
taskmanager/src/services/: api.js  auth.js  tasks.js  users.js
taskmanager/src/stores/: auth.js  notifications.js  tasks.js  users.js
taskmanager/src/views/: Dashboard.vue  Login.vue  NotFound.vue  TaskDetail.vue  TaskForm.vue  TaskList.vue  UserForm.vue  UserList.vue
tests/: README.md  __init__.py  test_api.py
